force-app/main/default/objects/Candidate__c/fields/USA_visa_holder__c.field-meta.xml
<CustomField>
    <fullName>USA_visa_holder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>USA visa holder</label>
    <type>Checkbox</type>
</CustomField>