force-app/main/default/objects/Candidate__c/fields/USA_visa_valid_From__c.field-meta.xml
<CustomField>
    <fullName>USA_visa_valid_From__c</fullName>
    <label>USA visa valid From</label>
    <type>Date</type>
</CustomField>