force-app/main/default/objects/Candidate__c/fields/USA_visa_valid_To__c.field-meta.xml
<CustomField>
    <fullName>USA_visa_valid_To__c</fullName>
    <label>USA visa valid To</label>
    <type>Date</type>
</CustomField>