force-app/main/default/objects/Candidate__c/fields/WorkingCompany__c.field-meta.xml
<CustomField>
    <fullName>WorkingCompany__c</fullName>
    <label>Working Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>