force-app/main/default/objects/Candidate__c/fields/Years_in_IT__c.field-meta.xml
<CustomField>
    <fullName>Years_in_IT__c</fullName>
    <label>Years in IT</label>
    <precision>18</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>